# learn-opengl

./: .gitignore  CMakeLists.txt
include/: Config.hpp
includes/: Config.hpp
lib/: AppContext.cpp  AppContext.hpp  ColorEntity.cpp  ColorEntity.hpp
lib/palette-rules/: ArmonicTriad.hpp  ColorPaletteRule.hpp  PaletteRules.hpp
src/: main.cpp
